Afsluttet basic grid

--- a/bootstrap-grid.html
+++ b/bootstrap-grid.html
@@ -35,48 +35,48 @@
         <!-- Resposive grid som skifter i størrelse col=Mobil col-md=Tablet col-xl=Pc -->
         <div class="row">
             <div class="col-12 col-md-6 col-xl-3">
-                <div class="bg-primary">Test</div>
+                <div class="bg-primary">Basic</div>
             </div>
             <div class="col-12 col-md-6 col-xl-3">
-                <div class="bg-danger">Test</div>
+                <div class="bg-danger">Basic</div>
             </div>
             <div class="col-12 col-md-6 col-xl-3">
-                <div class="bg-logoColor">Test</div>
+                <div class="bg-logoColor">Basic</div>
             </div>
             <div class="col-12 col-md-6 col-xl-3">
-                <div class="bg-success">Test</div>
+                <div class="bg-success">Basic</div>
             </div>
         </div> <br> <br>
 
         <!-- Grid på 2x2 kolonner som kommer under hinanden grundet de fylder 6/12 -->
         <div class="row">
             <div class="col-6">
-                <div class="bg-primary">Test</div>
+                <div class="bg-primary">Basic</div>
             </div>
             <div class="col-6">
-                <div class="bg-danger">Test</div>
+                <div class="bg-danger">Basic</div>
             </div>
             <div class="col-6">
-                <div class="bg-logoColor">Test</div>
+                <div class="bg-logoColor">Basic</div>
             </div>
             <div class="col-6">
-                <div class="bg-success">Test</div>
+                <div class="bg-success">Basic</div>
             </div>
         </div> <br> <br>
 
         <!-- Grid på 4x1 kolonner som fylder lige meget hver -->
         <div class="row">
             <div class="col">
-                <div class="bg-primary">Test</div>
+                <div class="bg-primary">Basic</div>
             </div>
             <div class="col">
-                <div class="bg-danger">Test</div>
+                <div class="bg-danger">Basic</div>
             </div>
             <div class="col">
-                <div class="bg-logoColor">Test</div>
+                <div class="bg-logoColor">Basic</div>
             </div>
             <div class="col">
-                <div class="bg-success">Test</div>
+                <div class="bg-success">Basic</div>
             </div>
         </div>
     </div>
