Afsluttet Advanced Grid

--- a/bootstrap-grid.html
+++ b/bootstrap-grid.html
@@ -78,6 +78,34 @@
             <div class="col">
                 <div class="bg-success">Basic</div>
             </div>
+        </div> <br> <br>
+
+        <!-- row g-3 betyder at der er en gutter på 3 som laver mere mellemrum både mellem indhold og for neden -->
+        <!-- gy og gx laver mellemrum på x aksen og på y aksen hvilket vil sige den laver enten mellem eller for neden-->
+        <div class="row g-2">
+            <div class="col-6">
+                <div class="bg-primary">Advanced</div>
+            </div>
+            <div class="col-6">
+                <div class="bg-danger">Advanced</div>
+            </div>
+            <div class="col-6">
+                <div class="bg-logoColor">Advanced</div>
+            </div>
+
+            <!-- Nested grid som ligger inde i den første grid del som en under sektion -->
+            <div class="col-6">
+                <div>
+                    <div class="row g-2">
+                        <div class="col-6 bg-info">
+                            <div>Advanced Nested</div>
+                        </div>
+                            <div class="col-6 bg-secondary">
+                                <div>Advanced Nested</div>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
